<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="hello">Hello World</string>
    <string name="app_name">LunchList</string>
    <string name="lunchTime">It\'s time for lunch!</string>
    <string name="lunch_alarm">Sound a Lunch Alarm</string>
    <string name="time_for_lunch">Check if you want to know when it is time for lunch</string>
    <string name="check_status_bar">Check if you want a status bar icon at lunchtime, or uncheck for a full-screen notice</string>
    <string name="notification">Use a Notification</string>
    <string name="check_box">Check if you want a status bar icon at lunchtime, or uncheck for a full-screen notice</string>
    <string name="empty">No restaurants</string>
    <string name="help">Help</string>
    <string name="save_location">Save Location</string>
    <string name="rss_feed">RSS Feed</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="sort_order">Sort Order</string>
    <string name="choose_a_sort_order">Choose a sort order</string>
    <string name="alarm_ringtone">Alarm Ringtone</string>
    <string name="alarm_ring">alarm_ringtone</string>
</resources>
