<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
xmlns:android="http://schemas.android.com/apk/res/android">
	<ListPreference
		android:key="sort_order"
		android:title="@string/sort_order"
		android:summary="Choose the order the list uses"
		android:entries="@array/sort_names"
		android:entryValues="@array/sort_clauses"
		android:dialogTitle="@string/choose_a_sort_order" />
	<CheckBoxPreference
	    android:key="alarm"
	    android:title="@string/lunch_alarm"
		android:summary="@string/time_for_lunch" />
	<csci498.tonnguye.lunchlist.TimePreference
		android:key="alarm_time"
		android:title="Lunch Alarm Time"
		android:defaultValue="12:00"
		android:summary="Set your desired time for the lunch alarm"
		android:dependency="alarm" />
	<CheckBoxPreference
		android:key="use_notification"
		android:title="@string/notification"
		android:defaultValue="true"
		android:summary="@string/check_box"
		android:dependency="alarm" />
	<RingtonePreference
	    android:key="alarm_ringtone"
	    android:title="@string/alarm_ringtone"
	    android:summary="Indicate the ringtone to play when it is lunchtime"
	    android:showSilent="true"
	    android:dependency="alarm" />
</PreferenceScreen>
